Closed
Bug 61452
Opened 25 years ago
Closed 25 years ago
Can't type in URL field
Categories
(Core :: XUL, defect, P1)
Core
XUL
Tracking
()
VERIFIED
FIXED
People
(Reporter: tracy, Assigned: sfraser_bugs)
References
Details
(Keywords: smoketest)
Attachments
(1 file)
|
37.36 KB,
text/plain
|
Details |
seen on Mac commercial build 2000-11-29-04-Mtrunk
-open navigator
-attempt to type lovcation in URL field
can't do it!!
Comment 1•25 years ago
|
||
fix component
Assignee: hangas → trudelle
Component: User Interface: Design Feedback → XP Toolkit/Widgets
QA Contact: mpt → jrgm
Comment 2•25 years ago
|
||
reassign to pink for investigation
Set to platform/os all since I see this on macintosh mozilla debug builds and
linux mozilla debug builds from today.
Assignee: trudelle → pinkerton
OS: Mac System 9.x → All
Hardware: Macintosh → All
Comment 3•25 years ago
|
||
Comment 4•25 years ago
|
||
sounds more like focus, ->saari/P1
Assignee: pinkerton → saari
Priority: P3 → P1
Comment 5•25 years ago
|
||
this works on both mac and win32 for me. i think bryner would have noticed when
i had him verify on linux.
wtf?
can anyone get me which line it's crashing on? the stack crawls only get me so far.
Comment 6•25 years ago
|
||
dbaron doesn't see this either. it's not a blocker IMHO.
Severity: blocker → critical
Comment 7•25 years ago
|
||
packaging issue. fixed.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 8•25 years ago
|
||
verified fixed on Mac commercial build 2000-11-29-09-Mtrunk
Status: RESOLVED → VERIFIED
Comment 9•25 years ago
|
||
I still see this in my updated/trashed dist build from 30 minutes ago... (debug)
reopening bug; Simon says he sees it on his mac debug build also.
btw, I also see this on debug Linux build from 30 minutes ago as well.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Comment 10•25 years ago
|
||
tell me what line it crashes on.
Comment 11•25 years ago
|
||
stupid reusing trashed memory bug. smfr will check in the fix.
Assignee: saari → sfraser
Status: REOPENED → NEW
| Assignee | ||
Comment 12•25 years ago
|
||
Fix checked in. We had to null out the global when we delete it.
Status: NEW → RESOLVED
Closed: 25 years ago → 25 years ago
Resolution: --- → FIXED
Comment 13•25 years ago
|
||
*** Bug 61519 has been marked as a duplicate of this bug. ***
Comment 15•25 years ago
|
||
*** Bug 61661 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•