Fix crasher bug when typing in the URL bar, bug 61452. Need to null out a global when we delete it. r=pinkerton